fixed footer to bottom of page without overlaps

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 .page-container {
     position: relative;
     min-height: 100vh;
+    padding-bottom: 5rem;
 }
 
 h1 {
@@ -50,11 +51,11 @@ h1 {
 }
 
 footer {
-    position: relative;
+    position: absolute;
     text-align: center;
     bottom: 0;
     width: 100%;
-    height: 6rem;
+    height: 5rem;
     padding-bottom: 20px;
     font-family:'Rubik', sans-serif;
     font-weight: 500;
